# rma1

./: README.md
AR4RGB/: CMakeLists.txt  Clouds.files  ar4rgbd.cpp  ar4rgbd.cpp.autosave
AR4RGB/Data/Clouds/seq_1/background_no_objs_1/: 129950502913.pcd
AR4RGB/Data/Clouds/seq_1/background_objs_1/: backgorund_objs.pcd
AR4RGB/Data/Clouds/seq_1/draw_objs_1/: 129950585005.pcd  129950585102.pcd  129950585203.pcd  129950585337.pcd  129950585418.pcd  129950585549.pcd  129950585559.pcd  129950585646.pcd  129950586013.pcd  drawing_point_blue.pcd
AR4RGB/Data/Clouds/seq_1/erase_objs_1/: 129950592127.pcd  129950592579.pcd  129950593080.pcd  erasing_1.pcd  erasing_3.pcd  erasing_4.pcd  start_erasing.pcd
AR4RGB/Data/Clouds/seq_1/point_objs_1/: 129950574048.pcd  129950574265.pcd  confim_blue.pcd  confirm_red.pcd  pen_hands_down.pcd  point_to_red.pcd  point_to_table_1.pcd
AR4RGB/Data/Clouds/seq_2/background_objs_2/: background_objs.pcd
AR4RGB/Data/Clouds/seq_2/draw_objs_2/: 129950541056.pcd  129950541299.pcd  129950541447.pcd  129950541523.pcd  129950541706.pcd  129950542065.pcd  129950542152.pcd  129950542245.pcd
AR4RGB/Data/Clouds/seq_2/erase_objs_2/: 129950546645.pcd  129950547286.pcd  129950547687.pcd  129950548208.pcd  erasing_2.pcd  start_erasing.pcd
AR4RGB/Data/Clouds/seq_2/point_objs_2/: 129950529167.pcd  129950529227.pcd  129950529487.pcd  129950532853.pcd  confirm_red.pcd  point_to_blue.pcd
AR4RGB/Data/Clouds/seq_3/background_no_objs_3/: 129976532142.pcd
AR4RGB/Data/Clouds/seq_3/background_objs_3/: background_objs.pcd
(+24 files in other folders)
